--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ android.enableJetifier=true
 # Kotlin configuration
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.androidSourceSetLayoutV2AndroidStyleDirs.nowarn=true
 
 # Gradle configuration
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
