--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ gradle.local.properties
 build/
 
 library/build/
+
+# Generated JavaScript files and caches
+kotlin/
+kotlin-js-store/
+
+# NPM packages (generated)
+*.tgz
+node_modules/
