feat: Introduce experimental Cloud OCR functionality
This commit introduces a major new feature: experimental cloud-based Optical Character Recognition (OCR). This functionality allows for text extraction from images using various cloud providers.

- **Experimental OCR API:**
  - Added an `@ExperimentalOCRApi` annotation to mark all OCR-related components. This signifies that the API is subject to change and requires external service configuration (e.g., API keys).
  - Introduced a suite of custom exceptions for better error handling, including `OCRException`, `CloudOCRException`, `MissingAPIKeyException`, and `InvalidAPIKeyException`.

- **Cloud Provider Integration:**
  - Implemented a flexible `CloudOCRProvider` sealed class to support multiple services (Gemini, OpenAI, Claude, Azure, Ollama, and Custom).
  - Added `GeminiOCRProvider` as the initial default implementation for text extraction.
  - Created a centralized `KtorInstance` singleton to manage and reuse HTTP clients for all OCR network requests, improving performance and consistency.
  - Included an `APIKeyValidator` to verify that API keys are correctly configured before making requests.

- **Android Gallery Picker Enhancement:**
  - Introduced `AndroidGalleryConfig` to allow forcing a "gallery-only" picker.
  - This new configuration uses `Intent.ACTION_PICK` instead of `GetContent()` to prevent the file manager from opening, providing a more consistent user experience on Android.
  - The picker automatically falls back to a generic file picker when non-image types like PDFs are requested.

- **UI and Utilities:**
  - Added an `OCRProgressDialog` to provide visual feedback to the user during the text extraction process.
  - Created an `OCRUtils` object with helper functions for calculating request timeouts and detecting file MIME types.
  - Added a test file for the Desktop gallery picker launcher.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.13.0"
 cameraCore = "1.5.1"
 cameraView = "1.5.1"
 core = "3.5.3"
+exifinterface = "1.4.2"
 kotlin = "2.1.21"
 android-minSdk = "24"
 android-compileSdk = "36"
@@ -11,6 +12,7 @@ compose = "1.9.1"
 androidx-activityCompose = "1.11.0"
 kotlinxCoroutinesCore = "1.10.2"
 kotlinxCoroutinesCoreVersion = "1.10.2"
+materialIconsExtendedVersion = "1.7.8"
 ui = "1.9.4"
 ktor = "3.0.2"
 
@@ -20,6 +22,8 @@ androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.r
 androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraCore" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraCore" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
+androidx-exifinterface = { module = "androidx.exifinterface:exifinterface", version.ref = "exifinterface" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
 androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "ui" }
 core = { module = "com.google.zxing:core", version.ref = "core" }
